<resources>
    <string name="app_name">Ayuda</string>
    <string name="login_button_text">Login</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_member">Already A Member?</string>
    <string name="create_account">Create Account</string>
    <string name="view_more_details">VIEW MORE DETAILS</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="volunteer">Volunteer</string>
    <string name="foundation">Foundation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_view_my_activity">My Activities</string>
    <string name="title_activity_view_activities">Activities</string>
    <string name="title_create_activity">Create Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
